# assay

./: .dockerignore  .env.example  .gitignore  .trivyignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: deploy.md  portfolio-copy.md
docs/product/: 2026-07-03-naming-brief.md  2026-07-03-product-thesis.md
docs/superpowers/plans/: COORDINATION.md
docs/superpowers/specs/: 2026-06-10-flagship-elevation-design.md
evals/: tickers.json
migrations/: env.py
migrations/versions/: 0001_warehouse_initial.py  0002_verdicts.py
scripts/: seed_library.py  smoke.py
src/: graph.py  state.py
src/agents/: _metrics.py  debate.py  reporter.py  router.py  trader.py
src/agents/analysts/: fundamentals.py  news.py  technicals.py
src/agents/research/: bear.py  bull.py  facilitator.py  synthesis.py
src/agents/risk/: __init__.py  aggressive.py  arbiter.py  conservative.py
src/api/: client_ip.py  demo_guard.py  edge.py  lifespan.py  main.py  schemas.py  stream.py
src/api/routes/: __init__.py  analyze.py  deps.py  dto.py  eval_results.py  library.py  market.py  quota.py
src/collector/: __init__.py  scheduler.py  service.py  watchlist.py
src/config/: settings.py
src/eval/: harness.py  judge.py  report.py  run.py
src/llm/: cost.py  factory.py  fake.py  schemas.py
src/memory/: __init__.py  cache.py  embeddings.py  reflection.py  store.py
src/tools/: __init__.py  fake_data.py  firecrawl.py  tradingview.py  x_social.py  yfinance.py
src/warehouse/: __init__.py  bootstrap.py  db.py  ingest.py  models.py  repos.py  types.py
tests/: conftest.py  test_api_demo_guard.py  test_api_library.py  test_api_lifespan.py  test_api_main.py  test_api_market.py  test_api_schemas.py  test_api_static.py  test_api_stream.py  test_cache.py  test_ci_artifacts.py  test_cost.py  test_coverage_gate.py  test_debate_runner.py  test_deploy_artifacts.py  test_embeddings.py  test_eval_harness.py  test_eval_judge.py  test_eval_report.py  test_eval_run.py  test_graph_debate_modes.py  test_graph_skeleton.py  test_graph_wiring.py  test_ingest.py  test_legacy_removed.py  test_llm_fake.py  test_reflection.py  test_reporter.py  test_research_live.py  test_research_nodes.py  test_risk_nodes.py  test_run_persistence.py  test_schemas.py  test_settings.py  test_smoke.py  test_state.py  test_store.py
tests/agents/: conftest.py  test_fundamentals_analyst.py  test_news_analyst.py  test_risk_arbiter.py  test_risk_personas.py  test_router.py  test_technicals_analyst.py  test_trader.py  test_wp_e_live.py  test_write_through.py
tests/collector/: test_scheduler.py  test_service.py  test_watchlist.py
tests/integration/: test_fake_llm_e2e.py  test_full_graph_mocked.py  test_live_smoke.py
tests/tools/: test_firecrawl.py  test_tool_error.py  test_tradingview.py  test_x_social.py
tests/warehouse/: test_db.py  test_models.py  test_pg_integration.py  test_repos.py  test_types.py
web/: DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: App.tsx  main.tsx  router.tsx
web/src/components/shell/: AppShell.tsx  AuroraBackground.tsx  Footer.tsx  HealthDot.tsx  PageTransition.test.tsx  PageTransition.tsx  QuotaPill.test.tsx  QuotaPill.tsx  RouteFallback.tsx  TopNav.test.tsx  TopNav.tsx  Wordmark.tsx  live.ts
web/src/components/ui/: button.tsx  empty-state.tsx  glass-card.tsx  page-header.tsx  panel.tsx  signal-badge.tsx
web/src/features/analyze/: AnalyzeForm.tsx  LiveFeed.test.tsx  LiveFeed.tsx  nodeLabels.ts
web/src/features/analyze/cockpit/: AnalystTrio.test.tsx  AnalystTrio.tsx  ArmedCanvas.tsx  Cockpit.test.tsx  Cockpit.tsx  ConvictionGauge.tsx  CostTicker.tsx  DebateTheater.tsx  DecisionReveal.test.tsx  DecisionReveal.tsx  PipelineCanvas.tsx  QuotaBlocked.tsx  StatusAnnouncer.test.tsx  StatusAnnouncer.tsx  TradeRisk.tsx  TransportBar.test.tsx  TransportBar.tsx  cockpit.css  eventPlayer.test.ts  eventPlayer.ts  panelKit.tsx  pipeline.test.ts  pipeline.ts  replayEvents.test.ts  replayEvents.ts  replayFixture.ts  transportTime.ts
web/src/features/eval/: CostQualityScatter.test.tsx  CostQualityScatter.tsx  EvalStates.tsx  JudgeBadges.tsx  MethodologyTape.tsx  PairTable.test.tsx  PairTable.tsx  RunRail.test.tsx  RunRail.tsx  VerdictBand.tsx  evalFormat.ts  judgeChrome.ts
web/src/features/market/: CandlestickChart.tsx  DossierHeader.tsx  ExplorerSearch.tsx  ExplorerStates.tsx  FundamentalsPanel.tsx  InstrumentRow.tsx  NewsFeed.tsx  PricePanel.tsx  ResearchHitRow.tsx  marketChips.tsx
web/src/hooks/: analysisReducer.ts  useAnalysisStream.test.ts  useAnalysisStream.ts  useHealth.ts  useQuota.ts  useReducedMotion.ts
web/src/lib/: api.test.ts  api.ts  query.tsx  sse.test.ts  sse.ts  utils.ts
web/src/pages/: AnalyzePage.test.tsx  AnalyzePage.tsx  DossierPage.tsx  EvalPage.test.tsx  EvalPage.tsx  LibraryPage.test.tsx  LibraryPage.tsx  MarketPage.tsx  NotFoundPage.tsx  RunDetailNotFound.test.tsx  RunDetailPage.test.tsx  RunDetailPage.tsx
web/src/styles/: index.css
web/src/test/: render.tsx
