[project]
name = "finresearchai"
version = "0.2.0"
description = "Debate-driven multi-agent financial research system"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.0.4",
    "langchain-core==1.2.5",
    "langchain-openai==1.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
memory = [
    "chromadb==1.5.9",
    "fastembed==0.8.0",
]
web     = ["firecrawl-py==4.28.2"]
data    = ["yfinance==0.2.66", "tradingview-ta==3.3.0"]
api = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "sse-starlette==3.4.4",
    "httpx==0.28.1",
]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Aggregate group CI installs so lint/type-check/tests see every import path.
all = [
    "finresearchai[memory]",
    "finresearchai[web]",
    "finresearchai[data]",
    "finresearchai[api]",
    "finresearchai[dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the live (network) test by default; CI and local runs stay offline.
# --strict-markers turns any unregistered marker into an error (catches typos).
addopts = "-v -m \"not live\" --strict-markers --ignore=tests/test_flow.py --ignore=tests/test_international.py --ignore=tests/test_ui_logic.py"
asyncio_mode = "auto"
markers = [
    "live: hits a real external API; skipped unless RUN_LIVE=1 (deselect with '-m \"not live\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
# Lenient: we type-check that imports resolve and obvious mistakes, not strict typing.

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
# Coverage threshold is OPT-IN: enable by running `pytest --cov=src --cov-fail-under=60`.
# Not enforced by default CI to avoid blocking on integration-test coverage gaps.
show_missing = true
