[project]
name = "finresearchai"
version = "0.2.0"
description = "Debate-driven multi-agent financial research system"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.0.10",
    # langgraph 1.0.x allows checkpoint <5; pin >=4 explicitly because
    # CVE-2026-27794 (JsonPlusSerializer deserialization) is fixed in 4.0.0.
    "langgraph-checkpoint>=4,<5",
    "langchain-core==1.4.4",
    "langchain-openai==1.1.16",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web     = ["firecrawl-py==4.28.2"]
data    = ["yfinance==0.2.66", "tradingview-ta==3.3.0"]
api = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "sse-starlette==3.4.4",
    "httpx==0.28.1",
    # WP-3: the scheduled collector runs inside the API process.
    "apscheduler>=3.10,<4",
]
db = [
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3,<1.0",
    "greenlet>=3.0",
    # Embeddings live with the warehouse: fastembed powers WP-9 pgvector search.
    "fastembed==0.8.0",
]
dev = [
    "pytest==9.0.3",
    # pytest-asyncio <1.3 caps pytest<9; pytest-cov <7 predates pytest 9.
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.20",
]
# Aggregate group CI installs so lint/type-check/tests see every import path.
all = [
    "finresearchai[web]",
    "finresearchai[data]",
    "finresearchai[api]",
    "finresearchai[db]",
    "finresearchai[dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the live (network) and db (Postgres) tests by default; CI and local
# runs stay offline. --strict-markers turns any unregistered marker into an
# error (catches typos).
addopts = "-v -m \"not live and not db\" --strict-markers"
asyncio_mode = "auto"
markers = [
    "live: hits a real external API; skipped unless RUN_LIVE=1 (deselect with '-m \"not live\"')",
    "db: requires a running Postgres with pgvector (DATABASE_URL); deselected by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
# `src` is a namespace package (no src/__init__.py). Treat the repo root as the
# package base so `mypy src` names modules consistently (src.agents.*) and does not
# discover the same file twice under both "agents.*" and "src.agents.*".
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
# Lenient: we type-check that imports RESOLVE and catch obvious mistakes, not strict
# typing. These codes are disabled because the shared structured-output convention
# (`llm.with_structured_output(Schema, method=STRUCT_METHOD)` where STRUCT_METHOD is a
# plain str, and `result: Schema = await llm.ainvoke(...)` where LangChain's runtime
# return is dynamically typed) trips arg-type/assignment/operator across every node —
# these are false positives for our purposes, not real defects.
disable_error_code = ["arg-type", "assignment", "operator", "import-untyped"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
# Coverage threshold is OPT-IN: enable by running `pytest --cov=src --cov-fail-under=60`.
# Not enforced by default CI to avoid blocking on integration-test coverage gaps.
show_missing = true
